High frequency toolkit/components/contentanalysis/tests/browser/browser_content_analysis_dnd_diff_origin.js | single tracking bug
Categories
(Toolkit :: General, defect, P5)
Tracking
()
People
(Reporter: intermittent-bug-filer, Assigned: gstoll)
References
Details
(Keywords: intermittent-failure, intermittent-testcase)
Attachments
(1 file)
Filed by: amarc [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=486427226&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/E9esseHxROKE3heH1-xrlQ/runs/0/artifacts/public/logs/live_backing.log
[task 2024-12-11T12:24:01.223Z] 12:24:01 INFO - TEST-PASS | toolkit/components/contentanalysis/tests/browser/browser_content_analysis_dnd_diff_origin.js | [tab1->tab2:deny_drop|dragSource]| [dragend]| Successfully read from DataTransfer - "Dragged Test Data" == "Dragged Test Data" -
[task 2024-12-11T12:24:01.224Z] 12:24:01 INFO - [tab1->tab2:deny_drop|dragSource]| Document received dragend
[task 2024-12-11T12:24:01.224Z] 12:24:01 INFO - Buffered messages finished
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - TEST-UNEXPECTED-FAIL | toolkit/components/contentanalysis/tests/browser/browser_content_analysis_dnd_diff_origin.js | [tab1->tab2:deny_drop|dragTarget]| drop or drag leave existed - false == true - got false, expected true (operator ==)
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - Stack trace:
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - ok@resource://testing-common/SpecialPowersSandbox.sys.mjs:85:21
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - DragChildContextBase/this.ok@chrome://mochikit/content/tests/SimpleTest/DragChildContextBase.sys.mjs:148:15
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - checkDropOrDragLeave@chrome://mochikit/content/tests/SimpleTest/DragTargetChildContext.sys.mjs:15:10
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - @chrome://mochikit/content/tests/SimpleTest/DragParentContextBase.sys.mjs:70:51
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - execute@resource://testing-common/SpecialPowersSandbox.sys.mjs:139:12
[task 2024-12-11T12:24:01.228Z] 12:24:01 INFO - _spawnTask@resource://testing-common/SpecialPowersChild.sys.mjs:1620:15
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - receiveMessage@resource://testing-common/SpecialPowersChild.sys.mjs:255:21
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - JSActor query*receiveMessage@resource://testing-common/SpecialPowersParent.sys.mjs:1383:14
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - JSActor query*spawn@resource://testing-common/SpecialPowersChild.sys.mjs:1549:17
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - runRemote@chrome://mochikit/content/tests/SimpleTest/DragParentContextBase.sys.mjs:65:31
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - checkDropOrDragLeave@chrome://mochikit/content/tests/SimpleTest/DragTargetParentContext.sys.mjs:36:17
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - synthesizeMockDragAndDrop@chrome://mochikit/content/tests/SimpleTest/EventUtils.js:4556:23
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - async*runDnd@chrome://mochitests/content/browser/dom/events/test/browser_dragdrop_impl.js:31:21
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - runTest@chrome://mochitests/content/browser/toolkit/components/contentanalysis/tests/browser/browser_content_analysis_dnd_diff_origin.js:166:11
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - async*test_dnd_tab1_to_tab2@chrome://mochitests/content/browser/dom/events/test/browser_dragdrop_impl.js:137:9
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - handleTask@chrome://mochikit/content/browser-test.js:1147:26
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - _runTaskBasedTest@chrome://mochikit/content/browser-test.js:1219:18
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - async*Tester_execTest@chrome://mochikit/content/browser-test.js:1360:14
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - nextTest/<@chrome://mochikit/content/browser-test.js:1136:14
[task 2024-12-11T12:24:01.229Z] 12:24:01 INFO - SimpleTest.waitForFocus/<@chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:1058:13
[task 2024-12-11T12:24:01.230Z] 12:24:01 INFO - TEST-PASS | toolkit/components/contentanalysis/tests/browser/browser_content_analysis_dnd_diff_origin.js | [tab1->tab2:deny_drop|dragTarget]| element received proper number of mousedown events. - 0 == 0 -
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 6•11 months ago
|
||
https://wiki.mozilla.org/Bug_Triage#Intermittent_Test_Failure_Cleanup
For more information, please visit BugBot documentation.
| Reporter | ||
Comment 7•7 months ago
|
||
| treeherder | ||
New failure instance: https://treeherder.mozilla.org/logviewer?job_id=511472664&repo=autoland
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 10•7 months ago
|
||
Hi Greg, could you please take a look at this frequent failure?
Recent failure log -> https://treeherder.mozilla.org/logviewer?job_id=513442159&repo=autoland&lineNumber=6850
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 12•7 months ago
|
||
It's weird that this started failing two weeks ago; AFAICT there haven't been any content analysis changes that landed around that time.
The test is failing because the call from the mock to the real GetURIForDropEvent() is returning NS_ERROR_FAILURE.
Looking at the real method, it does return NS_ERROR_FAILURE in a few cases - if we can't get the browser parent, or we can't get the browsing context from the browser parent. I guess I can return different errors in those cases and at least see which case we're hitting.
| Assignee | ||
Comment 13•7 months ago
|
||
| Assignee | ||
Updated•7 months ago
|
Comment 14•7 months ago
|
||
Comment 15•7 months ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 17•7 months ago
|
||
The failures are now returning NS_ERROR_NOT_AVAILABLE, indicating that dom::BrowserParent::GetBrowserParentFromLayersId() is returning null.
| Assignee | ||
Comment 18•7 months ago
|
||
Ah, this is probably related/the real cause:
GECKO(9936) | console.error: "MockRegistrar: Creating original instance failed" [Exception... "Cannot modify properties of a WrappedNative" nsresult: "0x80570034 (NS_ERROR_XPC_CANT_MODIFY_PROP_ON_WN)" location: "JS frame :: resource://testing-common/MockRegistrar.sys.mjs :: createInstance :: line 91" data: no]
So we're probably failing to create the new mock, and maybe we're using an old one or something.
| Comment hidden (Intermittent Failures Robot) |
Comment 20•6 months ago
|
||
https://wiki.mozilla.org/Bug_Triage#Intermittent_Test_Failure_Cleanup
For more information, please visit BugBot documentation.
Updated•6 months ago
|
Description
•