Bug 1936521 - set different errors for different ways GetURIForDropEvent() can fail r=dlp-reviewers,handyman

Differential Revision: https://phabricator.services.mozilla.com/D254253